fix: padding for projects & alignment for footer

--- a/src/layouts/footer.scss
+++ b/src/layouts/footer.scss
@@ -60,7 +60,7 @@ footer .row {
 }
 
 .footer-rectangle .info {
-  padding-left: 70px;
+  text-align: center;
 }
 
 .footer-rectangle.active .footer-rectangle-left p {
