--- a/src/layouts/projects.sass
+++ b/src/layouts/projects.sass
@@ -96,7 +96,7 @@
 
 .project-description
   text-align: justify
-  max-width: 64vw
+  max-width: 820px
 
 .project-detail .center
   text-align: center
